--- a/oinarrizko_app_maketa/src/aukerak.html
+++ b/oinarrizko_app_maketa/src/aukerak.html
@@ -59,7 +59,7 @@
     <li >      
       <a onclick="divAudio()" id="audioLi">
         <span class="icon is-medium"><i class="fas fa-music" aria-hidden="true"></i></span>
-        <span>Audio erreproduktorea</span>
+        <span>Audio erreproduzitzailea</span>
       </a>
     </li>
   </ul>
@@ -174,7 +174,7 @@
 
 <div class="ezkutatu" id="audioAukeratu">
 	<section class="section">
-		<h3 class="subtitle is-3 mb-4  pb-4">Audio erreproduktorea </h3>
+		<h3 class="subtitle is-3 mb-4  pb-4">Audio erreproduzitzailea </h3>
 		<!-- Main container -->
 		<nav class="level">
 		  <!-- Left side -->
