--- a/oinarrizko_app_maketa/src/aukerak.html
+++ b/oinarrizko_app_maketa/src/aukerak.html
@@ -74,11 +74,11 @@
 	<section class="section">
 	  	<nav class="breadcrumb is-centered is-large has-bullet-separator naranja-kolorea" aria-label="breadcrumbs">
 		  <ul>
-		  	<li id="pertsonalizatua" class="is-active"><a class="title" id="pertsonalizatuaA"onclick="pertsonalizatuaDiv()" aria-current="page">Dantza pertsonalizatua</a></li>
-		    <li id="jota"><a onclick="jotaDiv()"  id="jotaA" class="naranja-kolorea">Jota / Porrue edo arin-arina (A-B-C)</a></li>		    
+		  	<li id="pertsonalizatua" class="is-active"><a class="title naranja-kolorea" id="pertsonalizatuaA" onclick="pertsonalizatuaDiv()" aria-current="page">Pauso erreprodukzio lista</a></li>
+		    <li id="jota"><a onclick="jotaDiv()"  id="jotaA" class="has-text-dark">Jota / Porrue edo arin-arina (A-B-C)</a></li>		    
 		  </ul>
 		</nav>
-		<h2 class="subtitle is-4 is-spaced" id="aukerarurakoDesk">Nahi dituzun pausuak aukeratu eta dantza pertsonalizatu bat eraiki!</h2>
+		<h2 class="subtitle is-4 is-spaced" id="aukerarurakoDesk">Nahi dituzun pausuak aukeratu eta erreprodukzio lista pertsonalizatu bat eraiki!</h2>
 		<div class=" mt-2 columns is-desktop is-multiline is-centered">
 		  <div class="column mx-5">
 		  	<article class="panel">
